doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
17
-classpath
C:\Program Files\BlueJ\lib\bluejcore.jar;C:\Program Files\BlueJ\lib\junit-jupiter-5.5.2.jar;C:\Program Files\BlueJ\lib\junit-jupiter-api-5.5.2.jar;C:\Program Files\BlueJ\lib\junit-jupiter-engine-5.5.2.jar;C:\Program Files\BlueJ\lib\junit-jupiter-migrationsupport-5.5.2.jar;C:\Program Files\BlueJ\lib\junit-jupiter-params-5.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-commons-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-console-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-console-standalone-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-engine-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-launcher-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-reporting-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-runner-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-suite-api-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-testkit-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-quickcheck-core-0.9.jar;C:\Program Files\BlueJ\lib\junit-vintage-engine-5.5.2.jar;C:\Program Files\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files\BlueJ\lib\hamcrest-library-1.3.jar;C:\Program Files\BlueJ\lib\lang-stride.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.base.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.controls.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.fxml.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.graphics.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.media.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.properties.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.swing.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.web.jar;C:\Users\invate\OneDrive - University of Brighton\Documents\GitHub\CI401atm
-d
C:\Users\invate\OneDrive - University of Brighton\Documents\GitHub\CI401atm\doc
-encoding
windows-1252
-charset
windows-1252
C:\Users\invate\OneDrive - University of Brighton\Documents\GitHub\CI401atm\Controller.java
<---- end of javadoc command ---->
Loading source file C:\Users\invate\OneDrive - University of Brighton\Documents\GitHub\CI401atm\Controller.java...
Constructing Javadoc information...
C:\Users\invate\OneDrive - University of Brighton\Documents\GitHub\CI401atm\Bank.java:142: error: illegal start of type
<<<<<<< HEAD
^
C:\Users\invate\OneDrive - University of Brighton\Documents\GitHub\CI401atm\Bank.java:142: error: > expected
<<<<<<< HEAD
            ^
C:\Users\invate\OneDrive - University of Brighton\Documents\GitHub\CI401atm\Bank.java:143: error: illegal start of type
=======
^
C:\Users\invate\OneDrive - University of Brighton\Documents\GitHub\CI401atm\Bank.java:145: error: malformed floating-point literal
>>>>>>> 048ef14 (added change pin button)
        ^
C:\Users\invate\OneDrive - University of Brighton\Documents\GitHub\CI401atm\Bank.java:145: error: ';' expected
>>>>>>> 048ef14 (added change pin button)
                             ^
C:\Users\invate\OneDrive - University of Brighton\Documents\GitHub\CI401atm\Bank.java:145: error: ';' expected
>>>>>>> 048ef14 (added change pin button)
                                        ^
C:\Users\invate\OneDrive - University of Brighton\Documents\GitHub\CI401atm\Bank.java:145: error: cannot find symbol
>>>>>>> 048ef14 (added change pin button)
                 ^
  symbol:   class added
  location: class Bank
C:\Users\invate\OneDrive - University of Brighton\Documents\GitHub\CI401atm\Bank.java:145: error: cannot find symbol
>>>>>>> 048ef14 (added change pin button)
                              ^
  symbol:   class pin
  location: class Bank
8 errors
